# NES_Emulator

./: Bus.cpp  CMakeLists.txt  CMakePresets.json  CPU.cpp  CPU.h  Makefile  README.md  cpu.c  cpu.h  main  main.c  main.cpp  memory.c  memory.h
NES_Emulator/: Bus.cpp  Bus.h  CMakeLists.txt  CPU.cpp  CPU.h  NES_Emulator.cpp  failingTests.txt  json.py  passingTests.txt
